--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <li>Universidad Centroamericana Jose Simeon cañas (3rd year)</li>
   </ul>
   <h3><a href="hobbies.html">My hobbies</a></h3>
-  <h3><a href="">Contact me</a></h3>
+  <h3><a href="contact.html">Contact me</a></h3>
   <hr />
   <table cellspacing="10">
     <thead>
