--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Chross</title>
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
-
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="ProfPic.png" alt="ProPic.png" height="250px" /></td>
+      <td><img src="Source/README.md" alt="ProPic.png" height="250px" /></td>
       <td>
         <h1>Christian Melgar</h1>
         <p>
