Fixed issues to start with debug session

--- a/hobbies.html
+++ b/hobbies.html
@@ -1,8 +1,24 @@
-<h3>Hobbies</h3>
-<ol>
-    <li>Reading</li>
-    <li>Playing <a href="https://steamcommunity.com/id/IDKCHRSSFKTHSSTM/">videogames</a> </li>
-    <li><a href="https://www.facebook.com/ARunners/">Running</a></li>
-    <li>Listening to <a href="https://open.spotify.com/playlist/6YNkpz1mS5MITq5zO4JRdo?si=227fdb6d0ecf4f0f">music</a></li>
-    <li>Watching movies</li>
-</ol>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <title>Hobbies</title>
+</head>
+
+<body>
+    <h3>Hobbies</h3>
+    <ol>
+        <li>Reading</li>
+        <li>Playing <a href="https://steamcommunity.com/id/IDKCHRSSFKTHSSTM/">videogames</a> </li>
+        <li><a href="https://www.facebook.com/ARunners/">Running</a></li>
+        <li>Listening to <a
+                href="https://open.spotify.com/playlist/6YNkpz1mS5MITq5zO4JRdo?si=227fdb6d0ecf4f0f">music</a></li>
+        <li>Watching movies</li>
+    </ol>
+</body>
+
+</html>
