--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,20 @@
-<h3>Contatc Info:</h3>
-<ul>
-    <li>Phone number: 5551 1065</li>
-    <li>Facebook:<a href="https://www.facebook.com/christian.melgar.555/"></a></li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/styles.css">
+    <title>Contact me</title>
+</head>
+
+<body>
+    <h3>Contatc Info:</h3>
+    <ul>
+        <li>Phone number: 5551 1065</li>
+        <li>Facebook:<a href="https://www.facebook.com/christian.melgar.555/"></a></li>
+    </ul>
+</body>
+
+</html>
