--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Source/README.md" alt="ProPic.png" height="250px" /></td>
+      <td><img src="Source/ProfPic.png" alt="ProPic.png" height="250px" /></td>
       <td>
         <h1>Christian Melgar</h1>
         <p>
@@ -34,6 +34,7 @@
   <h3><a href="hobbies.html">My hobbies</a></h3>
   <h3><a href="contact.html">Contact me</a></h3>
   <hr />
+  <h3>Work Experiecnce</h3>
   <table cellspacing="10">
     <thead>
       <tr>
@@ -69,6 +70,7 @@
         <td>Fraud Ops T2 Agent</td>
       </tr>
     </tbody>
+    <h3>Skills</h3>
   </table>
   <hr />
   <table border="1">
